# nva-aws-cli-tools

./: .gitignore  FILE_UPLOAD_HANDOFF.md  KJOREPLAN_NP-50757.md  NVI_COMPARE.md  README.md  cli.py  compare_handles.py  conftest.py  create_concurrency_report.py  delete_old_function_versions.py  extract_handles.py  fileService.py  list_old_function_versions.py  log_config.py  nvi_reports_2024_institutions.json  nvi_reports_2025_institutions.json  nvi_reports_all_periods.json  pyproject.toml  roles.py  test_author_shares_2025_baseline.xlsx  test_author_shares_2026_baseline.xlsx  test_nvi_reports_2024_institutions.json  test_nvi_reports_2025_institutions.json  test_nvi_reports_2026_institutions.json  test_nvi_reports_all_periods.json
.github/: dependabot.yml
.github/workflows/: build.yaml
commands/: awslambda.py  channels.py  cognito.py  cristin.py  customers.py  dlq.py  dynamodb.py  files.py  handle.py  organization_migration.py  pipelines.py  publications.py  reports.py  s3.py  search.py  sqs.py  sws.py  users.py  utils.py
commands/services/: api_client.py  aws_utils.py  channels_api.py  cognito_api.py  cristin.py  customers_api.py  dlq.py  dynamodb_export.py  dynamodb_exporter.py  dynamodb_publications.py  dynamodb_service.py  external_user.py  file_upload_api.py  handle_api.py  handle_task_executor.py  handle_task_writer.py  lambda_api.py  models.py  pipelines.py  publication_api.py  report_compare.py  resource.py  resource_batch_job.py  s3_versions.py  scientific_index_api.py  search_api.py  sqs.py  sws.py  sws_proxy.py  user_export.py  user_models.py  users_api.py
commands/tests/: test_awslambda_cli.py  test_cognito_cli.py  test_customers_cli.py  test_dlq_cli.py  test_files_cli.py  test_handle_cli.py  test_pipelines_cli.py  test_reports_cli.py  test_search_cli.py  test_sws_cli.py  test_users_cli.py
testdata/persons/: person1.json  person2.json  person3.json  person4.json  person5.json  (+1 more)
(+17 files in other folders)
