[project]
name = "nva-aws-cli-tools"
version = "0.1.0"
description = "Python scripts using aws-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.36",
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
    "deepdiff>=8.5.0",
    "uuid>=1.30",
    "python-json-logger>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
