[project]
name = "nva-aws-cli-tools"
version = "0.1.0"
description = "Python scripts using aws-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.11",
    "click>=8.3.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "deepdiff>=8.6.1",
    "uuid>=1.30",
    "python-json-logger>=4.0.0",
    "polars>=1.36.1",
    "xlsxwriter>=3.2.9",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
