[project]
name = "nva-aws-cli-tools"
version = "0.1.0"
description = "Python scripts using aws-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.96",
    "click>=8.3.3",
    "requests>=2.33.1",
    "rich>=14.2.0",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "deepdiff>=8.6.1",
    "uuid>=1.30",
    "tenacity>=9.1.4",
    "python-json-logger>=4.1.0",
    "polars>=1.40.1",
    "xlsxwriter>=3.2.9",
    "fastexcel>=0.20.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=commands --cov=cli --cov-report=term-missing --cov-fail-under=44"

[dependency-groups]
dev = [
    "moto[awslambda-simple,cognitoidp,ssm]>=5.1.22",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
